feat: persist and load person updates
